# COCBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml  requirements.txt
assets/templates/: README.txt
src/cocbot/: __init__.py  config.py  main.py
src/cocbot/adb/: device.py  input.py
src/cocbot/api/: client.py
src/cocbot/game/: navigator.py  resources.py  state.py
src/cocbot/tasks/: recruit.py  war.py
src/cocbot/utils/: delays.py  logging.py
src/cocbot/vision/: matcher.py  ocr.py
tests/: test_matcher.py  test_ocr_parser.py  test_recruit_filters.py  test_resources.py  test_utils.py
tools/: _inspect_player.py  _preview_embed.py  _seed_activity.py  _test_ranked.py  bot_config.json  capture_template.py  clipboard_server.py  clipboard_server_phone.py  config_manager.py  console_sink.py  coords.py  discord_bot.py  filter_players.py  find_coords.py  find_players.py  invite_players.py  member_activity.json  moderation.py  notice_board.py  termux_setup.sh  test_api.py  test_ocr_recruit.py
